=======================================================================
VERSION 0.2.9
=======================================================================

24-08-2010 Robert Smith <r.smith@brain.org.au>
    * cmd/tracks2prob.cpp:
      fix bug in handling of multiple contributions to a single voxel from a single track

04-08-2010 Robert Smith <r.smith@brain.org.au>
    * cmd/tracks2prob.cpp:
      reverted to previous interpretation of track 'density'
      (no scaling factor, finer interpolation & unary track->voxel contribution)

    * lib/point.h:
      added const qualifier to declaration of member function Point::cross()


28-07-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * src/mrview/sidebar/tractography/track_list_item.h:
      increased allocator slab size to 32MB to force release of RAM to OS on close()

    * doc/faq.html:
      add entry about issues with the Analyse image format

    * doc/install/unix.html:
      remove obsolote installation instructions for 64 bit systems

    * sysconf/linux.py:
      switch '-march' option to 'native' to allow compilation on 64-bit systems
      without manual editing (suggested by Rob Smith).


21-07-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * src/dwi/SH.h:
    * src/dwi/SH.cpp:
      improved SH::delta() function

    * src/mrview/sidebar/overlay.h:
    * src/mrview/sidebar/overlay.cpp:
    * src/mrview/sidebar/main.h:
    * src/mrview/sidebar/main.cpp:
      added new overlay sidebar tool


16-07-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/file/dicom/image.cpp:
      check for readable data in GE private DW tags before assigning

    * lib/file/dicom/element.cpp:
      fix bug in handling of big-endian files


15-07-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * build: 
      fix to allow the use of symbolic links (problem identified by Rob
      Smith)

    * Doxyfile: version number upped to 0.2.9

    * lib/mrtrix.h: MRTRIX_MICRO_VERSION upped to 9

